// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots MacroProduct Macro Product Default 1`] = `
<div
  className="sc-gKAblj fcDYJF"
>
  <div
    className="macro-product-name-downloads"
  >
    <h2
      className="macro-product-name"
    >
      rail brake
    </h2>
    <div
      className="sc-jSFkmK cQjiJW"
    >
      <a
        data-for="manual-tip"
        data-tip={true}
        href="https://www.dropbox.com/s/boc8ids41qq4ysx/manual.pdf?dl=0"
        rel="noopener noreferrer"
        target="_blank"
      >
        <div
          className="__react_component_tooltip t6b07c7a1-5827-419b-a102-eb49f38dfbe7 place-top type-dark"
          data-id="tooltip"
          id="manual-tip"
        >
          <style
            dangerouslySetInnerHTML={
              Object {
                "__html": "
  	.t6b07c7a1-5827-419b-a102-eb49f38dfbe7 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t6b07c7a1-5827-419b-a102-eb49f38dfbe7.place-top {
        margin-top: -10px;
    }
    .t6b07c7a1-5827-419b-a102-eb49f38dfbe7.place-top::before {
        border-top: 8px solid transparent;
    }
    .t6b07c7a1-5827-419b-a102-eb49f38dfbe7.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t6b07c7a1-5827-419b-a102-eb49f38dfbe7.place-bottom {
        margin-top: 10px;
    }
    .t6b07c7a1-5827-419b-a102-eb49f38dfbe7.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t6b07c7a1-5827-419b-a102-eb49f38dfbe7.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t6b07c7a1-5827-419b-a102-eb49f38dfbe7.place-left {
        margin-left: -10px;
    }
    .t6b07c7a1-5827-419b-a102-eb49f38dfbe7.place-left::before {
        border-left: 8px solid transparent;
    }
    .t6b07c7a1-5827-419b-a102-eb49f38dfbe7.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t6b07c7a1-5827-419b-a102-eb49f38dfbe7.place-right {
        margin-left: 10px;
    }
    .t6b07c7a1-5827-419b-a102-eb49f38dfbe7.place-right::before {
        border-right: 8px solid transparent;
    }
    .t6b07c7a1-5827-419b-a102-eb49f38dfbe7.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  ",
              }
            }
          />
          <span>
            Download Manual
          </span>
        </div>
        <img
          alt="Manual"
          src="manual.svg"
        />
      </a>
      <a
        data-for="drawings-tip"
        data-tip={true}
        href="https://www.dropbox.com/s/boc8ids41qq4ysx/manual.pdf?dl=0"
        rel="noopener noreferrer"
        target="_blank"
      >
        <div
          className="__react_component_tooltip t9d79f6ac-a499-4b13-820f-2e8534f4f524 place-top type-dark"
          data-id="tooltip"
          id="drawings-tip"
        >
          <style
            dangerouslySetInnerHTML={
              Object {
                "__html": "
  	.t9d79f6ac-a499-4b13-820f-2e8534f4f524 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t9d79f6ac-a499-4b13-820f-2e8534f4f524.place-top {
        margin-top: -10px;
    }
    .t9d79f6ac-a499-4b13-820f-2e8534f4f524.place-top::before {
        border-top: 8px solid transparent;
    }
    .t9d79f6ac-a499-4b13-820f-2e8534f4f524.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t9d79f6ac-a499-4b13-820f-2e8534f4f524.place-bottom {
        margin-top: 10px;
    }
    .t9d79f6ac-a499-4b13-820f-2e8534f4f524.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t9d79f6ac-a499-4b13-820f-2e8534f4f524.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t9d79f6ac-a499-4b13-820f-2e8534f4f524.place-left {
        margin-left: -10px;
    }
    .t9d79f6ac-a499-4b13-820f-2e8534f4f524.place-left::before {
        border-left: 8px solid transparent;
    }
    .t9d79f6ac-a499-4b13-820f-2e8534f4f524.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t9d79f6ac-a499-4b13-820f-2e8534f4f524.place-right {
        margin-left: 10px;
    }
    .t9d79f6ac-a499-4b13-820f-2e8534f4f524.place-right::before {
        border-right: 8px solid transparent;
    }
    .t9d79f6ac-a499-4b13-820f-2e8534f4f524.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  ",
              }
            }
          />
          <span>
            Download Drawings
          </span>
        </div>
        <img
          alt="Drawings"
          src="drawings.svg"
        />
      </a>
    </div>
  </div>
  <img
    alt="Product with id: 1"
    className="macro-product-image"
    src="https://www.rimagroup.com/wp-content/uploads/2019/06/Rail-Brake-TM.png"
  />
</div>
`;

exports[`Storyshots MacroProduct Macro Product No Thumb 1`] = `
<div
  className="sc-gKAblj fcDYJF"
>
  <div
    className="macro-product-name-downloads"
  >
    <h2
      className="macro-product-name"
    >
      rail brake
    </h2>
    <div
      className="sc-jSFkmK cQjiJW"
    >
      <a
        data-for="manual-tip"
        data-tip={true}
        href="https://www.dropbox.com/s/boc8ids41qq4ysx/manual.pdf?dl=0"
        rel="noopener noreferrer"
        target="_blank"
      >
        <div
          className="__react_component_tooltip t64b36cee-ec0c-4e42-8dbd-1391d5d2a748 place-top type-dark"
          data-id="tooltip"
          id="manual-tip"
        >
          <style
            dangerouslySetInnerHTML={
              Object {
                "__html": "
  	.t64b36cee-ec0c-4e42-8dbd-1391d5d2a748 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t64b36cee-ec0c-4e42-8dbd-1391d5d2a748.place-top {
        margin-top: -10px;
    }
    .t64b36cee-ec0c-4e42-8dbd-1391d5d2a748.place-top::before {
        border-top: 8px solid transparent;
    }
    .t64b36cee-ec0c-4e42-8dbd-1391d5d2a748.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t64b36cee-ec0c-4e42-8dbd-1391d5d2a748.place-bottom {
        margin-top: 10px;
    }
    .t64b36cee-ec0c-4e42-8dbd-1391d5d2a748.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t64b36cee-ec0c-4e42-8dbd-1391d5d2a748.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t64b36cee-ec0c-4e42-8dbd-1391d5d2a748.place-left {
        margin-left: -10px;
    }
    .t64b36cee-ec0c-4e42-8dbd-1391d5d2a748.place-left::before {
        border-left: 8px solid transparent;
    }
    .t64b36cee-ec0c-4e42-8dbd-1391d5d2a748.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t64b36cee-ec0c-4e42-8dbd-1391d5d2a748.place-right {
        margin-left: 10px;
    }
    .t64b36cee-ec0c-4e42-8dbd-1391d5d2a748.place-right::before {
        border-right: 8px solid transparent;
    }
    .t64b36cee-ec0c-4e42-8dbd-1391d5d2a748.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  ",
              }
            }
          />
          <span>
            Download Manual
          </span>
        </div>
        <img
          alt="Manual"
          src="manual.svg"
        />
      </a>
      <a
        data-for="drawings-tip"
        data-tip={true}
        href="https://www.dropbox.com/s/boc8ids41qq4ysx/manual.pdf?dl=0"
        rel="noopener noreferrer"
        target="_blank"
      >
        <div
          className="__react_component_tooltip t1eacdb3f-9bab-49d0-b7c4-0a8f2e53dd14 place-top type-dark"
          data-id="tooltip"
          id="drawings-tip"
        >
          <style
            dangerouslySetInnerHTML={
              Object {
                "__html": "
  	.t1eacdb3f-9bab-49d0-b7c4-0a8f2e53dd14 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t1eacdb3f-9bab-49d0-b7c4-0a8f2e53dd14.place-top {
        margin-top: -10px;
    }
    .t1eacdb3f-9bab-49d0-b7c4-0a8f2e53dd14.place-top::before {
        border-top: 8px solid transparent;
    }
    .t1eacdb3f-9bab-49d0-b7c4-0a8f2e53dd14.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t1eacdb3f-9bab-49d0-b7c4-0a8f2e53dd14.place-bottom {
        margin-top: 10px;
    }
    .t1eacdb3f-9bab-49d0-b7c4-0a8f2e53dd14.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t1eacdb3f-9bab-49d0-b7c4-0a8f2e53dd14.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t1eacdb3f-9bab-49d0-b7c4-0a8f2e53dd14.place-left {
        margin-left: -10px;
    }
    .t1eacdb3f-9bab-49d0-b7c4-0a8f2e53dd14.place-left::before {
        border-left: 8px solid transparent;
    }
    .t1eacdb3f-9bab-49d0-b7c4-0a8f2e53dd14.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t1eacdb3f-9bab-49d0-b7c4-0a8f2e53dd14.place-right {
        margin-left: 10px;
    }
    .t1eacdb3f-9bab-49d0-b7c4-0a8f2e53dd14.place-right::before {
        border-right: 8px solid transparent;
    }
    .t1eacdb3f-9bab-49d0-b7c4-0a8f2e53dd14.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  ",
              }
            }
          />
          <span>
            Download Drawings
          </span>
        </div>
        <img
          alt="Drawings"
          src="drawings.svg"
        />
      </a>
    </div>
  </div>
  <img
    alt="Product with id: 1"
    className="macro-product-image"
    src=""
  />
</div>
`;
